--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,8 @@
 {
-	"description" : "Dependencies for CodeIgniter's testing environment",
-	"name" : "ellislab/codeigniter",
+	"description" : "A way to install CodeIgniter via composer",
+	"name" : "rogeriopradoj/codeigniter",
+    "license": "OSL-3.0",
 	"require": {
 		"php": ">=5.2.4"
-	},
-	"require-dev": {
-		"mikey179/vfsStream": "*"
 	}
 }
